# py-xiaomi-walkingpad

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
src/py_xiaomi_walkingpad/: __init__.py  main.py  miio_adapter.py  service.py
src/py_xiaomi_walkingpad/app/: __init__.py  container.py  event_bus.py  service.py
src/py_xiaomi_walkingpad/domain/: contracts.py  events.py  models.py
src/py_xiaomi_walkingpad/infra/: config.py  miio_adapter.py
src/py_xiaomi_walkingpad/interface/: __init__.py  cli.py  config.py  factory.py  tui.py
src/py_xiaomi_walkingpad/types/: __init__.py  errors.py  events.py
tests/: test_config.py  test_event_bus.py  test_service.py
